--- a/Naomi/style.css
+++ b/Naomi/style.css
@@ -1,193 +1,125 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    font-size: 1rem;
-    font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
+body {
+  font-size: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
 }
 
-.container{
-    min-height:50%;
-    width:100%;
-   
+.container {
+  display: flex;
+  width: 60%;
+  margin: auto;
 }
 
-.col-1{
-    float:right;
-    position:absolute;
-    left:28%;
-    top:0%;
-    
-       
-
-
+.logo-section {
+  display: flex;
+  align-items: center;
+}
+.col-1 {
 }
 
-.col-2{
-    position:absolute;
-    text-align:right;
-    top:5%;
-    right:58%;
-    text-transform: capitalize;
-    font-size: 1.0rem;
-    font-family: Arial;
-    font-weight: 900;
-
+.col-2 {
+  font-weight: bold;
+  font-size: 20px;
+  text-transform: capitalize;
 }
 
-
-#sign{
-    position:absolute;
-    float:right;
-    right:60%;
-    top:10%;
-    padding:5%;
-    text-transform: capitalize;
-    font-size: 1.3rem;
-    
+.sign {
+  margin-top: 30px;
 }
 
-.mask{
-    position: absolute;
-    left:9.3%;
-    top:22.3%;
-    width:7.2%;
-    height:30.3vh;
-    
+.left-side {
+  position: relative;
+  width: 50%;
 }
 
-.arrow{
-    position: absolute;
-    top:29%;
-    bottom:50%;
-    left:11.5%;
-    width:5%;
+.right-side {
+  width: 50%;
+  padding: 0px 20px;
 }
 
-.arrows{
-    position: absolute;
-    top:38%;
-    bottom:50%;
-    left:11.5%;
-    width:5%;
+.hope {
+  width: 100%;
 }
 
-
-#center-el{
-    float:right; 
-    position: absolute;
-    right: 55%;
-    top:29%;
-    text-transform: capitalize;
-    font-weight: 300;
+.mask {
+  position: absolute;
+  top: 0px;
+  left: 38%;
+  top: 35%;
+  width: 145px;
 }
 
-
-.fa-solid{
-    float:right;
-    margin-right:60%;
-    color: rgb(227, 100, 100);
-    
+.mask > .mask-img {
+  width: inherit;
 }
 
-.fa-solid:hover{
-    color:rgb(77, 77, 247);
-
+.arr-cont {
+  position: relative;
+}
+.arrow {
+  position: absolute;
+  top: 12%;
+  /* left: 11.5%; */
 }
 
-.button-1{
-    display: flex;
-    position:absolute;
-    width:18%;
-    height:6vh;
-    top:35%;
-    left:30%;
-    text-align:center;
-    background-color: red;
-    color:white;
-    padding-left:4%;
-    padding-top: 1%;
-    border: none;
-    border-radius: 8px;
-    font-size:1rem;
-    cursor: pointer;
-
-    
-
+.arrows {
+  position: absolute;
+  top: 42%;
+  /* left: 11.5%; */
 }
 
-.button-2{
-    background-color: white;
-    color:red;
-    display: flex;
-    position:absolute;
-    width:18%;
-    height:6vh;
-    top:45%;
-    left:30%;
-    text-align:center;
-    padding-left:4%;
-    padding-top: 1%;
-    border: 1px solid red;
-    border-radius: 8px;
-    font-size:1rem;
-    cursor: pointer;
-
+.btn-cont {
+  margin-top: 30px;
 }
 
+#center-el {
+  text-transform: capitalize;
+  font-weight: 300;
+  margin-top: 30px;
+}
 
-/* 
-@media only screen and (min-width:600px){
-    /* for mobile phone 
-    .col-1{
-        width:50%;
-        left:25%;
-        top:3%;
+.fa-solid {
+  color: rgb(227, 100, 100);
+}
 
-    }
-    .col-2{
-        font-size: 2rem;
-        right:60.8%;
-        text-transform: capitalize;
-        
-        
-    }
-    #sign{
-        font-size: 2rem;
-        left:20%;
-        top:5%;
-    }
-    .mask{
-        width:5.8%;
-        height:18vh;
-        top:13%;
-        left:7.3%;
-        
-    }
-    .arrow{
-        width:5.3%;
-        top:15%;
-        left:7.4%;
-    }
-    .arrows{
-        width:5.3vw;
-        top:21%;
-        left:7.4%;
-    }
-    #center-el{
-        left:23%;
-        top:20%;
-        font-size: 1.2rem;
+.fa-solid:hover {
+  color: rgb(77, 77, 247);
+}
 
-    }
-    .button-1{
-        left:23%;
-        top:20%;
-        font-size: 1rem;
-    }
-    
-}  */
+.btn {
+  width: 60%;
+  padding: 10px 20px;
+}
+
+.button-1 {
+  text-align: center;
+  background-color: red;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.button-2 {
+  background-color: white;
+  color: red;
+  text-align: center;
+  border: 1px solid red;
+  border-radius: 8px;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.footer {
+  text-align: center;
+  width: 60%;
+  margin-top: 40px;
+}
